@@ -45,6 +45,8 @@ extern "C" {
     char* NP_GetMIMEDescription(void);
 }
 
+static void executeScript(const PluginObject* obj, const char* script);
+
 static NPError
 webkit_test_plugin_new_instance(NPMIMEType /*mimetype*/,
                                 NPP instance,
@@ -75,10 +77,15 @@ webkit_test_plugin_new_instance(NPMIMEType /*mimetype*/,
                 for (int i = 0; i < argc; i++)
                     if (strcasecmp(argn[i], "src") == 0)
                         pluginLog(instance, "src: %s", argv[i]);
-            } else if (strcasecmp(argn[i], "testwindowopen") == 0)
+            } else if (strcasecmp(argn[i], "cleardocumentduringnew") == 0)
+                executeScript(obj, "document.body.innerHTML = ''");
+            else if (!strcasecmp(argn[i], "ondestroy"))
+                obj->onDestroy = strdup(argv[i]);
+            else if (strcasecmp(argn[i], "testdocumentopenindestroystream") == 0)
+                obj->testDocumentOpenInDestroyStream = TRUE;
+            else if (strcasecmp(argn[i], "testwindowopen") == 0)
                 obj->testWindowOpen = TRUE;
         }
-
         instance->pdata = obj;
     }
 
@@ -90,6 +97,11 @@ webkit_test_plugin_destroy_instance(NPP instance, NPSavedData** /*save*/)
 {
     PluginObject* obj = static_cast<PluginObject*>(instance->pdata);
     if (obj) {
+        if (obj->onDestroy) {
+            executeScript(obj, obj->onDestroy);
+            free(obj->onDestroy);
+        }
+
         if (obj->onStreamLoad)
             free(obj->onStreamLoad);
 
@@ -173,6 +185,11 @@ webkit_test_plugin_destroy_stream(NPP instance, NPStream* /*stream*/, NPError /*
 
     if (obj->onStreamDestroy)
         executeScript(obj, obj->onStreamDestroy);
+
+    if (obj->testDocumentOpenInDestroyStream) {
+        testDocumentOpen(instance);
+        obj->testDocumentOpenInDestroyStream = FALSE;
+    }
 
     return NPERR_NO_ERROR;
 }
